Working with XML

--- a/notebooks/1_apple_podcasts_try_it_before.ipynb
+++ b/notebooks/1_apple_podcasts_try_it_before.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "e3dde3dd-2ce0-4f55-ab07-476db9b00462",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9da8d33a-4383-4cdb-9b0a-a74ad41d8e8e",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "fedf7b2e-38c2-4240-957c-cf934c757318",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "733520eb-275c-4858-abeb-49f5bf3e09d4",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "6659905d-eb8e-4cdf-97b4-ffb96dedea0b",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "cb3ec787-94f6-4845-8e95-ce3b7835dd5f",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "d878a4bd-291a-4b8a-8de1-1e15f8cb1d39",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "5f0371f1-1120-43ba-93bc-18995a7a0664",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "60baad75-9097-43d2-b296-e962fd0c0d89",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "cc08a584-fb7e-426a-a75b-e0172491d60b",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "cfeab241-1e43-4b89-bfeb-bb77a1784bf8",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "a310e145-2023-440f-ae0c-6b65a5e3536c",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "56eff946-4f8b-44b5-82d8-b4d6d7ca0c0c",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "5.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "fc317390-587f-4af4-b818-2f880f63bc69",
    "metadata": {},
    "outputs": [
@@ -298,8 +298,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "33799ebb-3c07-40a7-b5a0-d05fe0990f0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "EXERCISE 5: Working with dictionaries\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"EXERCISE 5: Working with dictionaries\")\n",
+    "print(\"=\"*80)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "257fd3a5-c025-40b7-86b5-5f355c890552",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Dictionary store key-value pairs (like JSON)\n",
+    "podcast = {\n",
+    "    \"name\": \"The Joe Rogan Experience\",\n",
+    "    \"host\": \"Joe Rogan\",\n",
+    "    \"episodes\": 2000\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9f3fe5bb-e953-4988-8417-9f93eda0a799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Podcast: The Joe Rogan Experience\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Podcast: {podcast['name']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "721ee299-7784-4834-b84f-75b423f6d50a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Host: Joe Rogan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Host: {podcast.get('host')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cdc23142-0d31-447b-b5a4-489d65ac428f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Genre: Unknown\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Genre: {podcast.get('genre', 'Unknown')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1c965a06-3d95-4e77-aa0b-c8c4887ce30a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "EXERCISE 6: Conditional Expressions (Ternary Operator)\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"EXERCISE 6: Conditional Expressions (Ternary Operator)\")\n",
+    "print(\"=\"*80)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "54d25e2f-2351-42e9-a2b0-57cb2f3d40b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age 15: minor\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: if-else in one line\n",
+    "age = 15\n",
+    "status = \"adult\" if age>= 18 else \"minor\"\n",
+    "print(f\"Age {age}: {status}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "beaabf52-b580-40f1-9535-2a08dc59fa12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Podcast: N/A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example with None checking\n",
+    "podcast_name = None\n",
+    "display_name = podcast_name if podcast_name is not None else \"N/A\"\n",
+    "print(f\"Podcast: {display_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "95630d18-0fc2-4b4b-9e81-f4a5e7aa07f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "EXERCISE 7: String formatting with numbers\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"EXERCISE 7: String formatting with numbers\")\n",
+    "print(\"=\"*80)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "25cc22a7-a8f0-4976-a67d-4ea81db5e583",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1; Episode 1\n",
+      " 2; Episode 2\n",
+      " 3; Episode 3\n",
+      " 4; Episode 4\n",
+      " 5; Episode 5\n",
+      " 6; Episode 6\n",
+      " 7; Episode 7\n",
+      " 8; Episode 8\n",
+      " 9; Episode 9\n",
+      "10; Episode 10\n",
+      "11; Episode 11\n",
+      "12; Episode 12\n",
+      "13; Episode 13\n",
+      "14; Episode 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Formating numbers in different ways\n",
+    "for i in range(1, 15):\n",
+    "    print(f\"{i:2d}; Episode {i}\") # 2d = 2-digit width, right-aligned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3ac660bb-95b8-4606-b081-cb24a689300f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price: $9.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: different number formatting\n",
+    "price = 9.99\n",
+    "print(f\"Price: ${price:.2f}\") # 2 decimal places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "08f380ae-1e55-4d4e-b7c2-16c5da518ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price: $    9.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Price: ${price:>8.2f}\") # Right aligned in 8 characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8e82c2a8-7649-4521-ae86-36e769193dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "EXERCISE 8: Working with XML (Simplified)\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"EXERCISE 8: Working with XML (Simplified)\")\n",
+    "print(\"=\"*80)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "2670130f-0ba3-4c1d-a04e-2ccf6a644856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xml.etree.ElementTree as ET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6102acd3-c0bd-473f-862d-3e12f64b41f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Parse a simple XML string\n",
+    "xml_data = \"\"\"\n",
+    "<podcasts>\n",
+    "    <podcast>\n",
+    "        <name>Tech Talk</name>\n",
+    "        <host>Jane Doe</host>\n",
+    "    </podcast>\n",
+    "    <podcast>\n",
+    "        <name>Science Hour</name>\n",
+    "        <host>John Smith</host>\n",
+    "    </podcast>\n",
+    "</podcasts>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e3355e32-e0b3-443e-99b9-61a35e0b4389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = ET.fromstring(xml_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "387cd1eb-34f8-4797-9501-9e9ad325c851",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Podcast: Tech Talk, Host: Jane Doe\n",
+      "Podcast: Science Hour, Host: John Smith\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find all podcast elements\n",
+    "for podcast in root.findall('podcast'):\n",
+    "    name = podcast.find('name').text\n",
+    "    host = podcast.find('host').text\n",
+    "    print(f\"Podcast: {name}, Host: {host}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a69f3005-f61a-49bb-ae88-0e45a86aa050",
    "metadata": {},
    "outputs": [],
    "source": []
