--- a/notebooks/free_coding.ipynb
+++ b/notebooks/free_coding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a40ebb54-06c2-4a78-bce9-fd164ee308fa",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "1ebc2db4-83bc-4f55-b19d-3cbfc1e27c56",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "73deab90-5a24-49cd-9868-fcfbd00c864b",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "45a44ffe-1b55-4b33-9dd0-d03bcbad087e",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "7977e4dd-9194-48cc-9bb4-f9ec6856e916",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "273148b9-a6a8-4192-9cfb-f8c420e5384f",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "d634d3c9-cbe3-4e29-a595-508936774008",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "c29bb4fb-093d-4be5-91f2-5c66fa0efe6d",
    "metadata": {},
    "outputs": [
@@ -211,8 +211,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3d20d769-2fba-441c-bab5-415b6ef77982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "music = {\n",
+    "    \"artist\": \"AMM\",\n",
+    "    \"album\": \"AMMMusic\",\n",
+    "    \"year\": 1989,\n",
+    "    \"genre\": \"Free Improvisation\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f24d5eb1-894e-4b85-9890-b6fa5b073b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artist: AMM - AMMMusic\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Artist: {music['artist']} - {music['album']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "450aee4b-3a26-4dd2-a3b5-5692f3a04949",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last.fm scrobbles: Unknown\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Last.fm scrobbles: {music.get('scrobbles', 'Unknown')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2efbe3ce-657c-4d0f-935e-fa743deef11d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1db8703f-9ad4-4a21-9b14-62e0fa9f48b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What to do today: Go to the park\n"
+     ]
+    }
+   ],
+   "source": [
+    "weather = \"Sun\"\n",
+    "status = \"Go to the park\" if weather == \"Sun\" else \"Better stay at home\"\n",
+    "print(f\"What to do today: {status}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6e847555-630f-489f-8c7f-94f4d65ded2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you have a pen?\n"
+     ]
+    }
+   ],
+   "source": [
+    "note = \"candy\"\n",
+    "status = \"I'll write your number\" if note == \"pen\" or note == \"pencil\" else \"Do you have a pen?\"\n",
+    "print(status)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "347b54f9-975e-42cb-803c-bedebe3cb193",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8e525d38-da81-42ee-8ab3-f73c894eb37a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Season Episodes\n",
+      "S01E1\n",
+      "S01E2\n",
+      "S01E3\n",
+      "S01E4\n",
+      "S01E5\n",
+      "S01E6\n",
+      "S01E7\n",
+      "S01E8\n",
+      "S01E9\n",
+      "S01E10\n",
+      "S01E11\n",
+      "S01E12\n",
+      "S01E13\n",
+      "S01E14\n",
+      "S01E15\n",
+      "S01E16\n",
+      "S01E17\n",
+      "S01E18\n",
+      "S01E19\n",
+      "S01E20\n",
+      "S01E21\n",
+      "S01E22\n",
+      "S01E23\n",
+      "S01E24\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First Season Episodes\")\n",
+    "for i in range(1, 25):\n",
+    "    print(f\"S01E{i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1dd619a-e809-442f-99a4-1682cb4a7b26",
    "metadata": {},
    "outputs": [],
    "source": []
