Create top podcasts program

--- a/notebooks/1_apple_podcasts_try_it_before.ipynb
+++ b/notebooks/1_apple_podcasts_try_it_before.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "2670130f-0ba3-4c1d-a04e-2ccf6a644856",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "6102acd3-c0bd-473f-862d-3e12f64b41f6",
    "metadata": {},
    "outputs": [],
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "e3355e32-e0b3-443e-99b9-61a35e0b4389",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "387cd1eb-34f8-4797-9501-9e9ad325c851",
    "metadata": {},
    "outputs": [
@@ -645,8 +645,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a69f3005-f61a-49bb-ae88-0e45a86aa050",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "EXERCISE 9: Making HTTP Requests (Using a Free API)\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"EXERCISE 9: Making HTTP Requests (Using a Free API)\")\n",
+    "print(\"=\"*80)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3494c715-718c-4d63-8e1c-f4c0487b7a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "974df8e4-8dd8-41ed-ade5-3be24c352d07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cat fact: Julius Ceasar, Henri II, Charles XI, and Napoleon were all afraid of cats.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Fetch random cat fact\n",
+    "try:\n",
+    "    response = requests.get(\"https://catfact.ninja/fact\", timeout=5)\n",
+    "    response.raise_for_status()\n",
+    "    data = response.json()\n",
+    "    print(f\"Cat fact: {data['fact']}\")\n",
+    "except requests.exceptions.RequestException as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4e29e609-1ed1-4309-9ecd-f0d131c80cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "EXERCISE 10: Putting It All Together\n",
+      "================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"EXERCISE 10: Putting It All Together\")\n",
+    "print(\"=\"*80)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5d07e88e-cb8e-4788-9236-932bd7e70b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "podcasts = [\"Darknet Diaries\", \"Decoder Ring\", \"Heavyweight\", \"Search Engine\", \"Short History Of...\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "9fd6ad29-93c1-4796-baaa-fd73162ccc65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a function called 'display_top_items'\n",
+    "def display_top_items(items=podcasts, category=\"Items\"):\n",
+    "    for index, podcast in enumerate(podcasts, 1):\n",
+    "        print(f\"{index}. {podcast} - {category}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "4976387a-ef4c-4245-acfe-6eecd673a8fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Darknet Diaries - Items\n",
+      "2. Decoder Ring - Items\n",
+      "3. Heavyweight - Items\n",
+      "4. Search Engine - Items\n",
+      "5. Short History Of... - Items\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_top_items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bb156b4-4a91-40b3-8ed5-2afcff0bec7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d433f52-64bb-43fb-aec9-ef5217b5fd74",
    "metadata": {},
    "outputs": [],
    "source": []
